syntax = "proto3";

option go_package = "./gen;gen";

import "Common.proto";

service HeartbeatService {
	//Send from server-OAM to vDU-OAM peridically, the default period is 1 minute.
  rpc Heartbeat (HeartbeatRequest) returns (HeartbeatResponse);
}


message HeartbeatRequest {
	int32 notify_interval = 1;
}

message HeartbeatResponse {
	ResultStatus result = 1;
	string error_message = 2; //empty when result is SUCCESS
}
